fix css error on mobile result page

--- a/mobile.css
+++ b/mobile.css
@@ -170,7 +170,7 @@ body {
     font-size: 1.5rem;
     margin: 15px 0;
     height: 2em;
-    width: 70%;
+    padding: 0 0.8em;
     border: 2px solid black;
     border-radius: 0.5em;   
 }
